# text-analysis-tools

./: .editorconfig
backend/: pyproject.toml
frontend/: bun.lockb  data.ts  package.json
frontend/app/: globals.css  page.tsx
frontend/components/: ScatterChart.tsx
