[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "piyota0901", email = "piyo.tatsu.0901@gmail.com" }
]
dependencies = [
    "pandas>=2.2.3",
    "scikit-learn>=1.5.2",
    "langchain>=0.3.2",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.31.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/backend"]
